@@ -96,13 +96,15 @@
                     </archive>
                 </configuration>
             </plugin>
+<!--
+messed up again. Too tired to battle this plugin...
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-baseline-maven-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
                     <base>
-                        <version>1.2.1</version>
+                        <version>1.3</version>
                     </base>
                  </configuration>
                 <executions>
@@ -114,6 +116,7 @@
                     </execution>
                 </executions>
             </plugin>
+-->
         </plugins>
     </build>
 
