@@ -30,14 +30,14 @@ import java.lang.annotation.Target;
 
 import javax.enterprise.util.Nonbinding;
 import javax.inject.Qualifier;
- 
+
 /**
  * <p>
  * Binds the injection point with a configured value.
  * Can be used to annotate injection points of type {@code TYPE}, {@code Optional<TYPE>} or {@code javax.inject.Provider<TYPE>},
  * where {@code TYPE} can be {@code String} and all types which have appropriate converters.
  * <p>
- * Injected values are the same values that would be retrieved from an injected {@link org.eclipse.microprofile.config.Config} instance 
+ * Injected values are the same values that would be retrieved from an injected {@link org.eclipse.microprofile.config.Config} instance
  * or from the instance retrieved from {@link org.eclipse.microprofile.config.ConfigProvider#getConfig()}
  *
  * <h2>Examples</h2>
@@ -47,7 +47,7 @@ import javax.inject.Qualifier;
  * The first sample injects the configured value of the {@code my.long.property} property.
  * The injected value does not change even if the underline
  * property value changes in the {@link org.eclipse.microprofile.config.Config}.
- * 
+ *
  * <p>Injecting a native value is recommended for a mandatory property and its value does not change at runtime or used by a bean with RequestScoped.
  * <p>A further recommendation is to use the built in {@code META-INF/microprofile-config.properties} file mechanism
  * to provide default values inside an Application.
@@ -57,14 +57,14 @@ import javax.inject.Qualifier;
  * &#064;ConfigProperty(name="my.long.property")
  * private Long injectedLongValue;
  * </pre>
- * 
+ *
  *
  * <h3>Injecting Optional Values</h3>
  *
- * 
+ *
  * Contrary to natively injecting, if the property is not specified, this will not lead to a DeploymentException.
- * The following code injects a Long value to the {@code my.optional.long.property}. 
- * If the property does not exist, the value {@code 123} will be assigned. 
+ * The following code injects a Long value to the {@code my.optional.long.property}.
+ * If the property does not exist, the value {@code 123} will be assigned.
  * to {@code injectedLongValue}.
  * <pre>
  * &#064;Inject
@@ -103,7 +103,7 @@ import javax.inject.Qualifier;
 public @interface ConfigProperty {
     String UNCONFIGURED_VALUE="org.eclipse.microprofile.config.configproperty.unconfigureddvalue";
     /**
-     * Provide a way to specify {@code null} value for a property. 
+     * Provide a way to specify {@code null} value for a property.
      * e.g. The following example is to set the default value of {@code my.port} to null if the property is not specified in any config sources.
      * <pre>
      * &#064;Inject
