@@ -36,14 +36,19 @@ It can also be used to implement a drop-in configuration approach.
 Simply create a jar containing a `ConfigSource` with a higher ordinal and override configuration values in it.
 If the jar is present on the classpath then it will override configuration values from <<ConfigSource,ConfigSources>> with lower `ordinal` values.
 
+=== Manually defining the Ordinal of a built-in ConfigSource
+
+Note that a special property `config_ordinal` can be set within any built-in `ConfigSource` implementation.
+The default implementation of `getOrdinal()` will attempt to read this value.
+If found and a valid integer, the value will be used.
+Otherwise the respective default value will be used.
+
 [source, text]
 ----
 config_ordinal = 120
 com.acme.myproject.someserver.url = http://more_important.server/some/endpoint
 ----
 
-
-Note that `config_ordinal` can be set within any `ConfigSource` implementation.  The default implementation of `getOrdinal()` will attempt to read this value, if found and a valid integer, the value will be used, otherwise the default of `100` will be returned.
 
 [[default_configsources]]
 === Default ConfigSources
@@ -142,6 +147,9 @@ public class ExampleYamlConfigSourceProvider
 
 Please note that a single `ConfigSource` should be either registered directly or via a `ConfigSourceProvider`, but never both ways.
 
+=== Cleaning up a ConfigSource
+
+If a `ConfigSource` implements the `java.lang.AutoCloseable` interface  then the `close()` method will be called when the underlying `Config` is being released.
 
 === ConfigSource and Mutable Data
 
