@@ -1,5 +1,5 @@
 //
-// Copyright (c) 2016-2017 Eclipse Microprofile Contributors:
+// Copyright (c) 2016-2018 Eclipse Microprofile Contributors:
 // Mark Struberg
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,7 +26,7 @@ Status: {revremark}
 
 Release: {revdate}
 
-Copyright (c) 2016-2017 Contributors to the Eclipse Foundation
+Copyright (c) 2016-2018 Contributors to the Eclipse Foundation
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
