@@ -34,26 +34,22 @@ tck.config.test.javaconfig.converter.shortvalue.broken = xxx
 tck.config.test.javaconfig.converter.integervalue = 1234
 tck.config.test.javaconfig.converter.integervalue.broken = xxx
 
-
 tck.config.test.javaconfig.converter.longvalue = 1234567890
 tck.config.test.javaconfig.converter.longvalue.broken = xxx
-
 
 tck.config.test.javaconfig.converter.floatvalue = 12.34
 tck.config.test.javaconfig.converter.floatvalue.broken = alfasdf
 
-
 tck.config.test.javaconfig.converter.doublevalue = 12.34
 tck.config.test.javaconfig.converter.doublevalue.broken = alfasdf
-
 
 tck.config.test.javaconfig.converter.charvalue = c
 tck.config.test.javaconfig.converter.charvalue.broken = xxx
 
+# the following are actually using implicit converters now:
 
 tck.config.test.javaconfig.converter.durationvalue = PT15M
 tck.config.test.javaconfig.converter.durationvalue.broken = alfasdf
-
 
 tck.config.test.javaconfig.converter.localtimevalue = 10:37
 tck.config.test.javaconfig.converter.localtimevalue.broken = alfasdf
@@ -78,6 +74,7 @@ tck.config.test.javaconfig.converter.instantvalue.broken = alfasdf
 
 tck.config.test.javaconfig.configvalue.key1=value1
 
+
 # test BooleanConverter START
 tck.config.test.javaconfig.configvalue.boolean.true=true
 tck.config.test.javaconfig.configvalue.boolean.true_uppercase=TRUE
@@ -92,6 +89,7 @@ tck.config.test.javaconfig.configvalue.boolean.yes=yes
 tck.config.test.javaconfig.configvalue.boolean.yes_uppercase=YES
 tck.config.test.javaconfig.configvalue.boolean.yes_mixedcase=Yes
 tck.config.test.javaconfig.configvalue.boolean.no=no
+tck.config.test.javaconfig.configvalue.boolean.no_mixedcase=No
 
 tck.config.test.javaconfig.configvalue.boolean.y=y
 tck.config.test.javaconfig.configvalue.boolean.y_uppercase=Y
@@ -125,10 +123,14 @@ tck.config.test.javaconfig.converter.urivalue=http://microprofile.io
 tck.config.test.javaconfig.converter.urivalue.broken=space is an illegal uri character
 
 # implicit Converter tests
+tck.config.test.javaconfig.converter.implicit.enumvalue = FOO
+tck.config.test.javaconfig.converter.implicit.enumvalue.broken = foobar
+tck.config.test.javaconfig.converter.implicit.charSequenceCt=charSequenceCt
+tck.config.test.javaconfig.converter.implicit.charSequenceParse=charSequenceParse
+tck.config.test.javaconfig.converter.implicit.charSequenceValueOf=charSequenceValueOf
 tck.config.test.javaconfig.converter.implicit.stringCt=stringCt
 tck.config.test.javaconfig.converter.implicit.stringValueOf=stringValueOf
 tck.config.test.javaconfig.converter.implicit.stringOf=stringOf
-tck.config.test.javaconfig.converter.implicit.charSequenceParse=charSequenceParse
 tck.config.test.javaconfig.converter.implicit.charSequenceParse.yearmonth=2017-12
 tck.config.test.javaconfig.converter.implicit.enumValueOf=BAZ
 
